--- a/.project
+++ b/.project
@@ -120,5 +120,6 @@
 		<nature>com.ibm.etools.mft.restapi.ui.Nature</nature>
 		<nature>com.ibm.etools.msgbroker.tooling.messageBrokerProjectNature</nature>
 		<nature>com.ibm.etools.msgbroker.tooling.applicationNature</nature>
+		<nature>com.ibm.etools.mft.bar.ext.barnature</nature>
 	</natures>
 </projectDescription>
